# gym

./: .gitignore  AGENTS.md
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  railpack.json  railway.json  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260425_0001_initial.py  20260425_0002_add_user_telephone_and_telegram_id.py  20260425_0003_make_email_password_optional_and_add_profile_fields.py  20260425_0004_drop_user_email_and_password.py  20260425_0005_drop_user_status_flags.py  20260503_0006_add_uuid_server_defaults.py
backend/app/: main.py  tests_support.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  orders.py  payments.py  plans.py  resources.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: redis.py  session.py
backend/app/models/: __init__.py  access_grant.py  mixins.py  order.py  payment_event.py  plan.py  resource.py  session.py  user.py
backend/app/schemas/: access.py  auth.py  order.py  payment.py  plan.py  resource.py  user.py
backend/app/services/: access_service.py  auth_service.py  order_service.py  payment_service.py  rate_limit_service.py  resource_service.py  session_service.py  telegram_auth_service.py  user_service.py
backend/app/tasks/: celery_app.py  jobs.py
backend/tests/: conftest.py  test_access.py  test_auth.py  test_telegram_auth.py  test_webhook.py
frontend/: .env.local.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
(+43 files in other folders)
