[project]
name = "gym-backend"
version = "0.1.0"
description = "Production-oriented MVP backend for paid resource access"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0",
  "psycopg[binary]>=3.2.0",
  "redis[hiredis]>=5.2.0",
  "passlib[argon2]>=1.7.4",
  "python-dateutil>=2.9.0",
  "python-multipart>=0.0.12",
  "email-validator>=2.2.0",
  "celery[redis]>=5.4.0",
  "httpx>=0.28.0",
  "greenlet>=3.1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "aiosqlite>=0.21.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
